--- a/war/.classpath
+++ b/war/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/bukkit"/>
+	<classpathentry kind="lib" path="C:/dev/war/war/lib/Permissions.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
