Closes 23. Closes 24. Closes 30. Death by lava seems to work ok on my side. Inventories get reset and signs as well. Fixed tp error with drowning deaths - weird workaround. Fire is extinguished back at the player spawn.

--- a/war/.classpath
+++ b/war/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/bukkit"/>
 	<classpathentry kind="lib" path="C:/dev/war/war/lib/Permissions.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/craftbukkit"/>
+	<classpathentry kind="lib" path="C:/dev/war/war/lib/minecraft_server.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
