--- a/war/pom.xml
+++ b/war/pom.xml
@@ -45,5 +45,12 @@
     	<version>0.0.1-SNAPSHOT</version>
     	<scope>compile</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.nijikokun.bukkit</groupId>
+    	<artifactId>Permissions</artifactId>
+    	<version>2.7.4</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
