Added missing dependencies

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -52,5 +52,17 @@
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
+    <dependency>
+	<groupId>junit</groupId>
+	<artifactId>junit</artifactId>
+	<version>4.8.1</version>
+	<scope>compile</scope>
+    </dependency>
+    <dependency>
+	<groupId>org.mockito</groupId>
+	<artifactId>mockito-all</artifactId>
+	<version>1.8.5</version>
+	<scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
