--- a/war/pom.xml
+++ b/war/pom.xml
@@ -56,7 +56,7 @@
 	<groupId>junit</groupId>
 	<artifactId>junit</artifactId>
 	<version>4.8.1</version>
-	<scope>compile</scope>
+	<scope>test</scope>
     </dependency>
     <dependency>
 	<groupId>org.mockito</groupId>
