Added complete basic spout integration
Not complete, just added some listener classes and started to play
around with it.

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -64,5 +64,10 @@
 	<version>1.8.5</version>
 	<scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.spoutcraft</groupId>
+    	<artifactId>spoutcraftapi</artifactId>
+    	<version>dev-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
