--- a/war/pom.xml
+++ b/war/pom.xml
@@ -35,14 +35,13 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-      <type>jar</type>
+      <version>1.0.0-R1-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>org.bukkit</groupId>
     	<artifactId>craftbukkit</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
+    	<version>1.0.0-SNAPSHOT</version>
     	<scope>compile</scope>
     </dependency>
     <dependency>
