Added a configuration converter

--- a/war/.classpath
+++ b/war/.classpath
@@ -8,6 +8,9 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/craftbukkit"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/dev/war/war/lib/mockito-all-1.8.5.jar"/>
+	<classpathentry kind="lib" path="/Users/Shared/bukkit-1.0.1-R1.jar"/>
+	<classpathentry kind="lib" path="/Users/Shared/craftbukkit-1.0.1-R1.jar"/>
+	<classpathentry kind="lib" path="/Users/Shared/Permissions.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Permissions"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
