--- a/war/pom.xml
+++ b/war/pom.xml
@@ -13,6 +13,10 @@
             <id>spout-repo</id>
             <url>http://nexus.getspout.org/content/groups/public/</url>
         </repository>
+		<repository>
+		  <id>sk89q-mvn2</id>
+		  <url>http://mvn2.sk89q.com/repo</url>
+		 </repository>
     </repositories>
   <build>
       <plugins>
@@ -67,12 +71,6 @@
 	<artifactId>mockito-all</artifactId>
 	<version>1.8.5</version>
 	<scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>com.nijikokun.bukkit</groupId>
-    	<artifactId>Permissions</artifactId>
-    	<version>2.7.4</version>
-    	<scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
