--- a/war/pom.xml
+++ b/war/pom.xml
@@ -45,13 +45,13 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.0.1-R1</version>
+      <version>1.1-R1-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>org.bukkit</groupId>
     	<artifactId>craftbukkit</artifactId>
-    	<version>1.0.1-R1</version>
+    	<version>1.1-R1-SNAPSHOT</version>
     	<scope>compile</scope>
     </dependency>
     <dependency>
