--- a/war/src/main/resources/plugin.yml
+++ b/war/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: War
-version: 1.7-PREVIEW (Doolittle)
+version: 1.7 (Doolittle)
 description: Lets you create TDM and CTF arenas (warzones) for a fast-paced and structured PVP experience.
 author: tommytony
 website: http://war.tommytony.com
