--- a/war/pom.xml
+++ b/war/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.tommytony</groupId>
   <artifactId>war</artifactId>
-  <version>1.7</version>
+  <version>1.7.1-PREVIEW</version>
   <packaging>jar</packaging>
 
   <name>War</name>
@@ -54,18 +54,6 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.bukkit</groupId>
-      <artifactId>bukkit</artifactId>
-      <version>1.1-R3</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.bukkit</groupId>
-    	<artifactId>craftbukkit</artifactId>
-    	<version>1.1-R3</version>
-    	<scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>org.getspout</groupId>
       <artifactId>spoutpluginapi</artifactId>
       <version>dev-SNAPSHOT</version>
@@ -82,6 +70,20 @@
 	<artifactId>mockito-all</artifactId>
 	<version>1.8.5</version>
 	<scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.bukkit</groupId>
+    	<artifactId>bukkit</artifactId>
+    	<version>1.1-R6</version>
+    	<type>pom</type>
+    	<scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.bukkit</groupId>
+    	<artifactId>craftbukkit</artifactId>
+    	<version>1.1-R6</version>
+    	<type>pom</type>
+    	<scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
