--- a/war/pom.xml
+++ b/war/pom.xml
@@ -66,23 +66,22 @@
 	<scope>test</scope>
     </dependency>
     <dependency>
-	<groupId>org.mockito</groupId>
-	<artifactId>mockito-all</artifactId>
-	<version>1.8.5</version>
-	<scope>test</scope>
-    </dependency>
-    <dependency>
     	<groupId>org.bukkit</groupId>
     	<artifactId>bukkit</artifactId>
-    	<version>1.1-R6</version>
+    	<version>1.2.4-R1.0</version>
     	<type>pom</type>
-    	<scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>org.bukkit</groupId>
     	<artifactId>craftbukkit</artifactId>
-    	<version>1.1-R6</version>
+    	<version>1.2.4-R1.0</version>
     	<type>pom</type>
+    </dependency>
+    <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-all</artifactId>
+    	<version>1.9.0</version>
+    	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
   </dependencies>
