--- a/war/pom.xml
+++ b/war/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.tommytony</groupId>
   <artifactId>war</artifactId>
-  <version>1.7.1-PREVIEW</version>
+  <version>1.7.1</version>
   <packaging>jar</packaging>
 
   <name>War</name>
