Zonemakers can't circumvent commandwhitelist anymore. Only war.admin perms lets you do that. Version v1.7.2-PREVEW.

--- a/war/src/main/resources/plugin.yml
+++ b/war/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: War
-version: 1.7.1 (Doolittle)
+version: 1.7.2-PREVIEW (Doolittle)
 description: Lets you create TDM and CTF arenas (warzones) for a fast-paced and structured PVP experience.
 author: tommytony
 website: http://war.tommytony.com
