--- a/war/.classpath
+++ b/war/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/Users/Shared/Java/Bukkit/Recommended/RC.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
