--- a/war/src/main/resources/plugin.yml
+++ b/war/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: War
-version: 1.7.3 (Doolittle)
+version: 1.7.4-PREVIEW (Doolittle)
 description: Minecraft PVP arenas (called warzones) for a fast-paced and structured PVP experience with TDM, CTF & more!
 author: tommytony
 website: http://war.tommytony.com
