--- a/war/pom.xml
+++ b/war/pom.xml
@@ -21,6 +21,10 @@
             <id>spout-repo</id>
             <url>http://repo.spout.org/</url>
         </repository>
+        <repository>
+            <id>tagapi-repo</id>
+            <url>http://repo.kitteh.org/content/repositories/public/</url>
+        </repository>
     </repositories>
   <issueManagement>
   	<system>Github issues</system>
@@ -75,6 +79,12 @@
     	<artifactId>bukkit</artifactId>
     	<version>1.4.5-R1.0</version>
     	<scope>compile</scope>
+    </dependency>
+    <dependency>
+	<groupId>org.kitteh</groupId>
+	<artifactId>tagapi</artifactId>
+	<version>2.0</version>
+	<scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>org.mockito</groupId>
