--- a/war/src/main/resources/plugin.yml
+++ b/war/src/main/resources/plugin.yml
@@ -5,7 +5,6 @@ author: tommytony
 website: http://war.tommytony.com
 main: com.tommytony.war.War
 softdepend: [Spout]
-database: true
 permissions:
   war.*:
     description: Full War permissions. Create and destroy warzones. Change War configuration.
@@ -85,6 +84,13 @@ commands:
     description: War> Team chat.
     usage: Team chat.
         Ex - /team <message>
+  wstats:
+    description: War> Prints the stats in War for a player.
+    usage: Lists the stats of a player.
+        Ex - /wstats <player>
+    aliases: 
+        - warstats
+        - wstat
 # Warzone maker commands (must have the 'war.zonemaker' permission or be added as a zone-maker in /plugins/War/war.txt)
 # Battle-related commands
   nextbattle:
