Create zones with WorldEdit cuboid selections
The WorldEdit API is utilized to allow the use of WorldEdit selections
when creating or modifying a warzone. If the current player has a
WorldEdit selection when the /setzone command is used, this selection will
be used for the zone's corners.

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -25,6 +25,10 @@
             <id>tagapi-repo</id>
             <url>http://repo.kitteh.org/content/repositories/public/</url>
         </repository>
+        <repository>
+            <id>sk89q-repo</id>
+            <url>http://maven.sk89q.com/repo/</url>
+        </repository>
     </repositories>
   <issueManagement>
   	<system>Github issues</system>
@@ -91,6 +95,12 @@
     	<version>1.8.5</version>
     	<type>jar</type>
     	<scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sk89q</groupId>
+      <artifactId>worldedit</artifactId>
+      <version>5.5.6</version>
+      <type>jar</type>
     </dependency>
   </dependencies>
 </project>
