--- a/war/pom.xml
+++ b/war/pom.xml
@@ -48,8 +48,8 @@
               <artifactId>maven-compiler-plugin</artifactId>
               <version>2.0.2</version>
               <configuration>
-                  <source>1.5</source>
-                  <target>1.5</target>
+                  <source>1.6</source>
+                  <target>1.6</target>
               </configuration>
           </plugin>
       </plugins>
@@ -81,7 +81,7 @@
     <dependency>
     	<groupId>org.bukkit</groupId>
     	<artifactId>bukkit</artifactId>
-    	<version>1.4.7-R1.0</version>
+    	<version>1.6.1-R0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
 	<groupId>org.kitteh</groupId>
