--- a/war/pom.xml
+++ b/war/pom.xml
@@ -81,7 +81,7 @@
     <dependency>
     	<groupId>org.bukkit</groupId>
     	<artifactId>bukkit</artifactId>
-    	<version>1.6.1-R0.1-SNAPSHOT</version>
+	<version>1.6.2-R0.1</version>
     </dependency>
     <dependency>
 	<groupId>org.kitteh</groupId>
