--- a/war/pom.xml
+++ b/war/pom.xml
@@ -18,8 +18,8 @@
             <url>http://repo.bukkit.org/content/groups/public</url>
         </repository>
         <repository>
-            <id>spout-repo</id>
-            <url>http://repo.spout.org/</url>
+            <id>cma-repo</id>
+            <url>http://maven.cmastudios.me/archiva/repository/internal</url>
         </repository>
         <repository>
             <id>tagapi-repo</id>
@@ -62,9 +62,9 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.getspout</groupId>
+      <groupId>org.spout</groupId>
       <artifactId>spoutplugin</artifactId>
-      <version>1.4.6-R0.2-SNAPSHOT</version>
+      <version>1.5.2-R1.0</version>
       <scope>compile</scope>
       <type>jar</type>
     </dependency>
