Remove deprecated BlockInfo in favor of Location/BlockState BlockInfo kept making me cringe every time I had to look at the code. More importantly it only had support for storing item IDs and no data. It was way obsolete versus new API.

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -39,6 +39,9 @@
   	<url>http://ci.tommytony.com</url>
   </ciManagement>
   <scm>
+        <connection>scm:git:git://github.com/taoneill/war.git</connection>
+	<developerConnection>scm:git:git@github.com:taoneill/war.git</developerConnection>
+	<tag>HEAD</tag>
   	<url>https://github.com/taoneill/war</url>
   </scm>
   <build>
