--- a/war/pom.xml
+++ b/war/pom.xml
@@ -7,6 +7,9 @@
   <packaging>jar</packaging>
   <name>War</name>
   <url>http://war.tommytony.com</url>
+  <prerequisites>
+    <maven>2.2.1</maven>
+  </prerequisites>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -60,7 +63,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>2.1</version>
+        <version>1.7.1</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -103,31 +106,31 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.1</version>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.6.2-R1.0</version>
+      <version>1.7.2-R0.2</version>
     </dependency>
     <dependency>
       <groupId>org.kitteh</groupId>
       <artifactId>tagapi</artifactId>
-      <version>2.0</version>
+      <version>2.7.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
-      <version>1.8.5</version>
+      <version>1.9.5</version>
       <type>jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.sk89q</groupId>
       <artifactId>worldedit</artifactId>
-      <version>5.5.6</version>
+      <version>5.5.8</version>
       <type>jar</type>
     </dependency>
     <dependency>
