Initial Vault support for economy
I personally dislike forcing our users to use a separate plugin
just to abstract different economy plugins, but sadly we live in a
hell world where there are 20 competing economy plugins and
counting so I don't want to deal with that.

--- a/war/src/main/resources/plugin.yml
+++ b/war/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ description: ${project.description}
 author: tommytony
 website: ${project.url}
 main: com.tommytony.war.War
-softdepend: [Spout, TagAPI, WorldEdit]
+softdepend: [Spout, TagAPI, WorldEdit, Vault]
 permissions:
   war.*:
     description: Full War permissions. Create and destroy warzones. Change War configuration.
