--- a/war/pom.xml
+++ b/war/pom.xml
@@ -35,6 +35,10 @@
       <id>mcstats.releases</id>
       <url>http://repo.mcstats.org/content/repositories/releases/</url>
     </repository>
+    <repository>
+      <id>vault-repo</id>
+      <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
+    </repository>
   </repositories>
   <issueManagement>
     <system>Github issues</system>
@@ -139,6 +143,11 @@
       <artifactId>metrics</artifactId>
       <version>R7</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.milkbowl.vault</groupId>
+      <artifactId>Vault</artifactId>
+      <version>1.2.32</version>
     </dependency>
   </dependencies>
 </project>
