--- a/sponge/pom.xml
+++ b/sponge/pom.xml
@@ -108,7 +108,7 @@
         </dependency>
         <dependency>
             <groupId>org.spongepowered</groupId>
-            <artifactId>spongeapi</artifactId>
+            <artifactId>SpongeAPI</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
