--- a/war/.classpath
+++ b/war/.classpath
@@ -29,5 +29,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="D:/Bukkit/Bukkit/craftbukkit.jar"/>
+	<classpathentry kind="lib" path="D:/Bukkit/plugins/Vault.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
