--- a/war/pom.xml
+++ b/war/pom.xml
@@ -32,8 +32,8 @@
       <url>http://maven.sk89q.com/repo/</url>
     </repository>
     <repository>
-      <id>mcstats.releases</id>
-      <url>http://repo.mcstats.org/content/repositories/releases/</url>
+      <id>mcstats</id>
+      <url>http://repo.mcstats.org/content/repositories/public/</url>
     </repository>
     <repository>
       <id>vault-repo</id>
@@ -141,7 +141,7 @@
     <dependency>
       <groupId>org.mcstats.bukkit</groupId>
       <artifactId>metrics</artifactId>
-      <version>R7</version>
+      <version>R8-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
